# omnect-ui

./: .dockerignore  .gitignore  Cargo.audit.ignore  Cargo.toml  Dockerfile  FRONTEND_TEST_CONCEPT.md  LICENSE-MIT  README.md  biome.json  build-and-deploy-image.sh  build-and-run-image.sh  build-arm64-image.sh  project-context.md
config/: centrifugo_config.json
config/omnect-device-service/: omnect-device-service.env  publish_endpoints.json.template
config/systemd/: create-fs-links.txt  omnect-ui.env.template  omnect-ui.service  omnect-ui.tmpfilesd
scripts/: build-and-deploy-image.sh  build-and-run-image.sh  build-frontend.sh  dev-setup.sh  generate-types.sh  run-e2e-tests.sh  setup-centrifugo.sh  test-e2e-in-container.sh
src/: api.rs  certificate.rs  common.rs  config.rs  http_client.rs  keycloak_client.rs  lib.rs  main.rs  middleware.rs  network.rs  omnect_device_service_client.rs  server_control.rs  socket_client.rs
src/app/: Cargo.toml  README.md
src/app/src/: events.rs  http_helpers.rs  lib.rs  macros.rs  model.rs  tests.rs  types.rs  wasm.rs
src/app/src/capabilities/: centrifugo.rs  centrifugo_command.rs  mod.rs
src/app/src/commands/: centrifugo.rs  mod.rs
src/app/src/types/: auth.rs  common.rs  device.rs  factory_reset.rs  mod.rs  network.rs  ods.rs  update.rs
src/app/src/update/: auth.rs  device.rs  mod.rs  ui.rs  websocket.rs
src/app/src/update/device/: mod.rs  network.rs  operations.rs  reconnection.rs
src/app/src/update/device/network/: config.rs  form.rs  mod.rs  verification.rs
src/auth/: mod.rs  token.rs
src/backend/: Cargo.toml
src/backend/src/: api.rs  build.rs  config.rs  http_client.rs  keycloak_client.rs  lib.rs  main.rs  middleware.rs  omnect_device_service_client.rs
src/backend/src/services/: certificate.rs  firmware.rs  marker.rs  mod.rs  network.rs
src/backend/src/services/auth/: authorization.rs  mod.rs  password.rs  token.rs
src/backend/tests/: http_client.rs  validate_portal_token.rs
src/services/: certificate.rs  firmware.rs  network.rs
src/services/auth/: password.rs  token.rs
src/shared_types/: .gitignore  Cargo.toml  build.rs
src/shared_types/src/: lib.rs
src/ui/: .gitignore  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/ui/src/: App.vue  style.css  test-core.ts
src/ui/src/auth/: oidc.ts
src/ui/src/components/: BaseSideBar.vue  DeviceActions.vue  DeviceInfoCore.vue  DialogContent.vue  Menu.vue  UpdateFileUpload.vue  UpdateInfo.vue  UserMenu.vue
src/ui/src/components/common/: PasswordField.vue
src/ui/src/components/device/: DeviceActions.vue  DeviceInfoCore.vue
src/ui/src/components/feedback/: OverlaySpinner.vue
src/ui/src/components/network/: DeviceNetworks.vue  NetworkSettings.vue
src/ui/src/components/ui-components/: KeyValuePair.vue
src/ui/src/components/update/: UpdateFileUpload.vue  UpdateInfo.vue
src/ui/src/composables/: useAsyncAction.ts  useAuthNavigation.ts  useCentrifugo.ts  useClipboard.ts  useCore.ts  useCoreInitialization.ts  useDialogState.ts  useIPValidation.ts  useMessageWatchers.ts  useOverlaySpinner.ts  usePasswordForm.ts  useWaitForNewIp.ts
src/ui/src/composables/core/: centrifugo.ts  effects.ts  http.ts  index.ts  state.ts  sync.ts  timers.ts  types.ts
src/ui/src/pages/: Callback.vue  DeviceOverview.vue  DeviceUpdate.vue  Login.vue  Network.vue  SetPassword.vue  UpdatePassword.vue
src/ui/src/plugins/: index.ts  router.ts  vuetify.ts
src/ui/src/types/: factory-reset.ts  global.d.ts  healthcheck-response.ts  index.ts  network-status.ts  ods.ts  system-info.ts  update-manifest.ts  update-validation-status.ts
src/ui/tests/: auth.spec.ts  device.spec.ts  error-handling.spec.ts  factory-reset.spec.ts  network-config-comprehensive.spec.ts  network-configuration.spec.ts  network-multi-adapter.spec.ts  network-rollback.spec.ts  network.spec.ts  reboot.spec.ts  smoke.spec.ts  update-rollback.spec.ts  update.spec.ts  version-mismatch.spec.ts
src/ui/tests/fixtures/: centrifugo.ts  mock-api.ts  network-test-harness.ts  test-setup.ts
static/: index.html
static/css/: styles.css
static/javascript/: omnect.js
tests/: http_client.rs  validate_portal_token.rs
tools/: setup-centrifugo.sh
vue/: biome.json  index.html  package.json
vue/src/: App.vue  main.ts  style.css  uno.config.ts
vue/src/auth/: auth-service.ts  oidc.ts
vue/src/components/: BaseSideBar.vue  DeviceActions.vue  DeviceInfo.vue  DeviceNetworks.vue  DialogContent.vue  Menu.vue  NetworkActions.vue  NetworkSettings.vue  OmnectLogo.vue  OverlaySpinner.vue  UpdateInfo.vue  UserMenu.vue
vue/src/composables/: useAwaitUpdate.ts  useCentrifugo.ts  useEventHook.ts  useOverlaySpinner.ts  useSnackbar.ts  useWaitForNewIp.ts  useWaitReconnect.ts
vue/src/enums/: centrifuge-subscription-type.enum.ts
vue/src/pages/: Callback.vue  DeviceOverview.vue  DeviceUpdate.vue  Login.vue  SetPassword.vue  UpdatePassword.vue
vue/src/plugins/: index.ts  router.ts  vuetify.ts
vue/src/theme/: theme.default.ts
vue/src/types/: factory-reset-keys.ts  factory-reset-status.ts  healthcheck-response.ts  index.ts  network-status.ts  online-status.ts  timeouts.ts  update-manifest.ts
