[workspace]
resolver = "2"
members = [
    "src/backend",
    "src/app",
    "src/shared_types",
]
# shared_types is excluded from default-members because it's only needed for TypeGen
# and conflicts with the dual lib/cdylib compilation of omnect-ui-core
default-members = [
    "src/backend",
    "src/app",
]

[workspace.package]
authors = ["omnect@conplement.de"]
edition = "2024"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
repository = "git@github.com:omnect/omnect-ui.git"
version = "1.1.2"
