[package]
name = "omnect-ui-core"
description = "Crux Core for omnect-ui application"
readme = "README.md"
edition = "2021"

authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "omnect_ui_core"

[features]
typegen = ["crux_core/typegen", "crux_http/typegen"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("facet_typegen"))'] }

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
console_log = { version = "1.0", default-features = false }
crux_core = { version = "0.17.0-rc2" }
crux_http = { version = "0.16.0-rc2", default-features = false }
crux_macros = { version = "0.8.0-rc2" }
lazy_static = { version = "1.4", default-features = false }
log = { version = "0.4", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }

[build-dependencies]
crux_core = { version = "0.17.0-rc2", default-features = false, features = ["typegen"] }
