[package]
name = "omnect-ui"
description = "WebService providing access to omnect device features."
readme = "../../README.md"
build = "src/build.rs"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
actix-cors = { version = "0.7", default-features = false }
actix-files = { version = "0.6", default-features = false }
actix-multipart = { version = "0.7", default-features = false, features = [
  "tempfile",
  "derive",
] }
actix-server = { version = "2.6", default-features = false }
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-web-static-files = { version = "4.1", features = ["static-files-03"] }
actix-web = { version = "4.11", default-features = false, features = [
  "macros",
  "rustls-0_23",
] }
actix-web-httpauth = { version = "0.8", default-features = false }
anyhow = { version = "1.0", default-features = false }
argon2 = { version = "0.5", default-features = false, features = [
  "password-hash",
  "alloc",
] }
base64 = { version = "0.22", default-features = false }
env_logger = { version = "0.11", default-features = false }
jwt-simple = { version = "0.12", default-features = false, features = [
  "optimal",
] }
log = { version = "0.4", default-features = false }
log-panics = { version = "2.1", default-features = false, features = [
  "with-backtrace",
] }
mockall = { version = "0.13", optional = true, default-features = false }
rand_core = { version = "0.9", default-features = false, features = ["std"] }
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rust-ini = { version = "0.21", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "std",
  "tls12",
] }
rustls-pemfile = { version = "2.2", default-features = false, features = [
  "std",
] }
semver = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [
  "raw_value",
] }
serde_repr = { version = "0.1", default-features = false }
serde_valid = { version = "2.0", default-features = false }
static-files = { version = "0.3", default-features = false }
tokio = { version = "1.45", default-features = false, features = [
  "macros",
  "net",
  "process",
] }
trait-variant = { version = "0.1", default-features = false }
uuid = { version = "1.17", default-features = false, features = ["v4"] }

[features]
mock = ["dep:mockall"]

[dev-dependencies]
actix-http = "3.11"
actix-service = "2.0"
mockall_double = "0.3"
tempfile = "3.20"

[build-dependencies]
static-files = { version = "0.3", default-features = false }
